<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context="yastas.gentera.hackathon.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/contenedor_conectar_con_redes"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:clickable="true">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/web_hi_res_512"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_app_name_login" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/correo_electronico"
            android:id="@+id/et_mail_login"
            android:inputType="textEmailAddress"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"></RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/contrasenna"
            android:inputType="textPassword"
            android:id="@+id/et_contrasenna_login"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"></RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_aviso_contrasenna_login"
                android:textColor="@color/rojo_letras_aviso"
                android:text="@string/aviso_usuario_contrasenna"
                android:layout_marginTop="2dp"
                android:visibility="invisible"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_olvidaste_tu_pass"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/olvidaste_tu_contrasenna"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/clickable_boton_blanco"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/btn_iniciar_sesion"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/clickable_boton_naranja"
            android:backgroundTint="@color/colorPrimaryDark"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_nuevo_registrate"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/nuevo_registrate"
            android:textStyle="bold"
            android:background="@drawable/clickable_boton_blanco"
            android:clickable="true"/>
    </LinearLayout>

</RelativeLayout>
