<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yastas.gentera.hackathon.AvisoPrivacidad">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_app_name_aviso"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/aviso_privacidad"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_aviso_de_privacidad"
            android:layout_marginBottom="5dp"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:padding="3dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_contenedor_aviso"
                    android:background="@android:color/white"/>
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aceptar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/btn_aceptar_aviso"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:backgroundTint="#11ff99"
            android:background="@drawable/clickable_boton_verde"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:id="@+id/btn_cancelar_aviso"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/clickable_boton_gris"
            android:backgroundTint="@color/gris"/>
    </LinearLayout>

</RelativeLayout>
